# skill-lint

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  action.yml  pyproject.toml  skill-lint-schema.json
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
docs/: rules.md
examples/fix-instruction-files/: SKILL.md
src/skill_lint/: __init__.py  cli.py  fixer.py  rules.py  scanner.py
tests/: test_cli.py  test_scanner.py
