[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-skill-lint"
version = "0.2.0"
description = "Linter for AI instruction files — skills, prompts, and agent specs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["linter", "ai", "skills", "prompts", "agents", "claude", "cursor", "copilot", "gemini"]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
authors = [{name = "Raj Zalavadia"}]

[project.scripts]
skill-lint = "skill_lint.cli:main"

[project.urls]
Homepage = "https://github.com/rajusem/skill-lint"
Repository = "https://github.com/rajusem/skill-lint"
Issues = "https://github.com/rajusem/skill-lint/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/skill_lint"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/skill_lint/rules.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
